--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
             <div class="row d-none d-md-flex g-4">
                 <div class="col-md-4">
                     <div class="banner-img">
-                        <img src="img/Bases/ANUNCIO 3.jpg" class="img-fluid w-100" alt="Anúncio 1">
+                        <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Cama%20Elástica"><img src="img/Bases/ANUNCIO 3.jpg" class="img-fluid w-100" alt="Anúncio 1"></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="banner-img">
-                        <img src="img/Bases/Bolinha.jpg" class="img-fluid w-100" alt="Anúncio 2">
+                        <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Piscina%20de%20Bolinhas"><img src="img/Bases/Bolinha.jpg" class="img-fluid w-100" alt="Anúncio 2"></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="banner-img">
-                        <img src="img/Bases/MESA.jpg" class="img-fluid w-100" alt="Anúncio 3">
+                        <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20um%20Kit%20de%20Cadeiras"><img src="img/Bases/MESA.jpg" class="img-fluid w-100" alt="Anúncio 3"></a>
                     </div>
                 </div>
             </div>
@@ -71,17 +71,17 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="banner-img">
-                            <img src="img/Bases/ANUNCIO 3.jpg" class="d-block w-100" alt="Anúncio 1">
+                            <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Cama%20Elástica"><img src="img/Bases/ANUNCIO 3.jpg" class="d-block w-100" alt="Anúncio 1"></a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="banner-img">
-                            <img src="img/Bases/Bolinha.jpg" class="d-block w-100" alt="Anúncio 2">
+                            <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Piscina%20de%20Bolinhas"><img src="img/Bases/Bolinha.jpg" class="d-block w-100" alt="Anúncio 2"></a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="banner-img">
-                            <img src="img/Bases/MESA.jpg" class="d-block w-100" alt="Anúncio 3">
+                            <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20um%20Kit%20de%20Cadeiras"><img src="img/Bases/MESA.jpg" class="d-block w-100" alt="Anúncio 3"></a>
                         </div>
                     </div>
                 </div>
