--- a/index.html
+++ b/index.html
@@ -190,13 +190,10 @@
                             <div id="carouselCard3" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/brinquedos/teste.png" class="d-block w-100 carousel-img" alt="Kit de cadeiras">
+                                        <img src="img/produtos/cadeira01.png" class="d-block w-100 carousel-img" alt="Kit de cadeiras">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/brinquedos/teste.png" class="d-block w-100 carousel-img" alt="Kit de cadeiras">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="img/brinquedos/teste.png" class="d-block w-100 carousel-img" alt="Kit de cadeiras">
+                                        <img src="img/produtos/cadeira02.png" class="d-block w-100 carousel-img" alt="Kit de cadeiras">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselCard3" data-bs-slide="prev">
