--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
     <!-- Anúncios da Loja - TEXTO ANIMADO FORA DA WRAPPER -->
     <div class="texto-animado">
         <p>
-            <img src="img/Bases/fretegratisrosa.png"> FRETE GRÁTIS PARA IPATINGA! <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
-            <img src="img/Bases/fretegratisrosa.png"> FRETE GRÁTIS PARA IPATINGA! <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
-            <img src="img/Bases/fretegratisrosa.png"> FRETE GRÁTIS PARA IPATINGA! <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
-            <img src="img/Bases/fretegratisrosa.png"> FRETE GRÁTIS PARA IPATINGA! <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
-            <img src="img/Bases/fretegratisrosa.png"> FRETE GRÁTIS PARA IPATINGA! <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
-            <img src="img/Bases/fretegratisrosa.png"> FRETE GRÁTIS PARA IPATINGA! <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
+            <img src="img/Bases/fretegratispreto.png"> FRETE GRÁTIS PARA IPATINGA!
         </p>
     </div>
     <div class="wrapper-geral">
@@ -65,16 +71,31 @@
                 <div class="col-md-4">
                     <div class="banner-img">
                         <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Cama%20Elástica"><img src="img/Bases/ANUNCIO 3.jpg" class="img-fluid w-100" alt="Anúncio 1"></a>
+                        <span class="banner-indicator">
+                            <i class="fa-solid fa-hand-pointer"></i>
+                            <span class="d-none d-md-inline">Clique</span>
+                            <span class="d-inline d-md-none">Toque</span>
+                        </span>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="banner-img">
                         <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Piscina%20de%20Bolinhas"><img src="img/Bases/Bolinha.jpg" class="img-fluid w-100" alt="Anúncio 2"></a>
+                        <span class="banner-indicator">
+                            <i class="fa-solid fa-hand-pointer"></i>
+                            <span class="d-none d-md-inline">Clique</span>
+                            <span class="d-inline d-md-none">Toque</span>
+                        </span>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="banner-img">
                         <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20um%20Kit%20de%20Cadeiras"><img src="img/Bases/MESA.jpg" class="img-fluid w-100" alt="Anúncio 3"></a>
+                        <span class="banner-indicator">
+                            <i class="fa-solid fa-hand-pointer"></i>
+                            <span class="d-none d-md-inline">Clique</span>
+                            <span class="d-inline d-md-none">Toque</span>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -85,16 +106,31 @@
                     <div class="carousel-item active">
                         <div class="banner-img">
                             <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Cama%20Elástica"><img src="img/Bases/ANUNCIO 3.jpg" class="d-block w-100" alt="Anúncio 1"></a>
+                            <span class="banner-indicator">
+                                <i class="fa-solid fa-hand-pointer"></i>
+                                <span class="d-none d-md-inline">Clique</span>
+                                <span class="d-inline d-md-none">Toque</span>
+                            </span>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="banner-img">
                             <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20uma%20Piscina%20de%20Bolinhas"><img src="img/Bases/Bolinha.jpg" class="d-block w-100" alt="Anúncio 2"></a>
+                            <span class="banner-indicator">
+                                <i class="fa-solid fa-hand-pointer"></i>
+                                <span class="d-none d-md-inline">Clique</span>
+                                <span class="d-inline d-md-none">Toque</span>
+                            </span>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="banner-img">
                             <a target="_blank" href="https://wa.me/553196607916?text=Tenho%20interesse%20em%20alugar%20um%20Kit%20de%20Cadeiras"><img src="img/Bases/MESA.jpg" class="d-block w-100" alt="Anúncio 3"></a>
+                            <span class="banner-indicator">
+                                <i class="fa-solid fa-hand-pointer"></i>
+                                <span class="d-none d-md-inline">Clique</span>
+                                <span class="d-inline d-md-none">Toque</span>
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -126,9 +162,6 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="img/brinquedos/pula2.jfif" class="d-block w-100 carousel-img" alt="Cama elástica pula pula">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="img/brinquedos/pula3.jfif" class="d-block w-100 carousel-img" alt="Cama elástica pula pula">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="img/brinquedos/pula4jfif.jfif" class="d-block w-100 carousel-img" alt="Cama elástica pula pula">
