--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                                 <a class="nav-link active" href="#">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="#razoes">Por que Alugar?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#faq">Dúvidas Frequentes</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="#sobre">Sobre Nós</a>
                             </li>
                             <li class="nav-item">
@@ -263,6 +269,163 @@
                         </div>
                     </div>
                 </div>
+ <!-- 5 Razões para Alugar e Não Comprar -->
+                <section id="razoes" class="my-5">
+                    <h2 class="text-center section-title">Por que alugar e não comprar!?</h2>
+                    <div class="row g-4 justify-content-center">
+                        <!-- Economia -->
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card card-razao h-100 border-0 shadow-sm">
+                                <div class="card-body text-center">
+                                    <div class="razao-icone mb-3" >
+                                        <i class="fa-solid fa-sack-dollar fa-2x"></i>
+                                    </div>
+                                    <h5 class="razao-titulo" >Economia</h5>
+                                    <p class="razao-texto">
+                                        Seu investimento na diversão e aprendizado do seu bebê será até 90% menor do que o valor de compra.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Custo-benefício -->
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card card-razao h-100 border-0 shadow-sm">
+                                <div class="card-body text-center">
+                                    <div class="razao-icone mb-3" >
+                                        <i class="fa-solid fa-arrows-rotate fa-2x"></i>
+                                    </div>
+                                    <h5 class="razao-titulo" >Custo-benefício</h5>
+                                    <p class="razao-texto">
+                                        Quando você compra um brinquedo, faz um investimento alto para algo temporário. Crianças mudam de interesses muito rápido.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Espaço -->
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card card-razao h-100 border-0 shadow-sm">
+                                <div class="card-body text-center">
+                                    <div class="razao-icone mb-3" >
+                                        <i class="fa-solid fa-cube fa-2x"></i>
+                                    </div>
+                                    <h5 class="razao-titulo" >Espaço</h5>
+                                    <p class="razao-texto">
+                                        Chega de precisar arrumar espaço para brinquedos sem uso.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Praticidade -->
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card card-razao h-100 border-0 shadow-sm">
+                                <div class="card-body text-center">
+                                    <div class="razao-icone mb-3" >
+                                        <i class="fa-solid fa-bolt fa-2x"></i>
+                                    </div>
+                                    <h5 class="razao-titulo" >Praticidade</h5>
+                                    <p class="razao-texto">
+                                        O processo de aluguel é descomplicado, rápido e seguro. Você escolhe o brinquedo e nós entregamos e buscamos na sua casa.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Sustentabilidade -->
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card card-razao h-100 border-0 shadow-sm">
+                                <div class="card-body text-center">
+                                    <div class="razao-icone mb-3" >
+                                        <i class="fa-solid fa-seedling fa-2x"></i>
+                                    </div>
+                                    <h5 class="razao-titulo" >Sustentabilidade</h5>
+                                    <p class="razao-texto">
+                                        Alugar brinquedos reduz o desperdício e contribui para um consumo mais consciente e sustentável.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- FIM 5 RAZÕES -->
+
+                <!-- FAQ - Dúvidas Frequentes -->
+                <section id="faq" class="my-5">
+                    <h2 class="text-center section-title">Dúvidas Frequentes</h2>
+                    <div class="accordion faq-accordion mx-auto" id="faqAccordion" style="max-width:700px;">
+                        <div class="accordion-item mb-3 rounded-4 border-0 shadow-sm">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button faq-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="false" aria-controls="faq1">
+                                    E se meu filho quebrar o brinquedo?
+                                </button>
+                            </h2>
+                            <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Não se preocupe! Entre em contato conosco e avaliaremos o ocorrido para encontrar a melhor solução juntos.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item mb-3 rounded-4 border-0 shadow-sm">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button faq-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
+                                    Os brinquedos são novos?
+                                </button>
+                            </h2>
+                            <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Trabalhamos com brinquedos em ótimo estado, sempre revisados e higienizados para garantir segurança e qualidade.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item mb-3 rounded-4 border-0 shadow-sm">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button faq-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3" aria-expanded="false" aria-controls="faq3">
+                                    Os brinquedos são higienizados?
+                                </button>
+                            </h2>
+                            <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Sim! Todos os brinquedos passam por higienização rigorosa após cada uso.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item mb-3 rounded-4 border-0 shadow-sm">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button faq-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
+                                    Quanto é para alugar um brinquedo?
+                                </button>
+                            </h2>
+                            <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Os valores variam conforme o brinquedo e o período. Consulte-nos pelo WhatsApp para orçamento rápido!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item mb-3 rounded-4 border-0 shadow-sm">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button faq-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5" aria-expanded="false" aria-controls="faq5">
+                                    E se meu filho se apegar ao brinquedo?
+                                </button>
+                            </h2>
+                            <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Podemos negociar a extensão do aluguel ou até a venda do brinquedo, caso haja interesse.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item mb-3 rounded-4 border-0 shadow-sm">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button faq-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq6" aria-expanded="false" aria-controls="faq6">
+                                    A Trakinas é uma loja de aluguel para brinquedos de festa?
+                                </button>
+                            </h2>
+                            <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Sim! Somos especializados no aluguel de brinquedos para festas e eventos infantis.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- FIM FAQ -->
 
                 <!-- Seção Sobre Nós -->
                 <section id="sobre" class="my-5 pt-5">
@@ -324,6 +487,8 @@
                         </div>
                     </div>
                 </section>
+
+               
             </div>
         </main>
     </div>
